--- a/resources/assets/frontend/sass/app.scss
+++ b/resources/assets/frontend/sass/app.scss
@@ -46,5 +46,6 @@
 @import "./elements/form";
 
 //**********************************************
-
+//@import "./snippets/test2";
+@import "./snippets/header-menu";
 
