--- a/resources/assets/frontend/sass/fonts.scss
+++ b/resources/assets/frontend/sass/fonts.scss
@@ -1,35 +1,84 @@
-/* roboto-300 - latin */
+/* open-sans-300 - latin */
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
-  src: local('Roboto Light'), local('Roboto-Light'),
-  url('../../../_fonts/roboto-v18-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../../_fonts/roboto-v18-latin-300.woff') format('woff'), /* Modern Browsers */
-  url('../../../_fonts/roboto-v18-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../../_fonts/roboto-v18-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
+  src: local('Open Sans Light'), local('OpenSans-Light'),
+  url('../../_fonts/open-sans-v15-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/open-sans-v15-latin-300.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/open-sans-v15-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/open-sans-v15-latin-300.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 
-/* roboto-regular - latin */
+/* open-sans-regular - latin */
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src: local('Roboto'), local('Roboto-Regular'),
-  url('../../../_fonts/roboto-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../../_fonts/roboto-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
-  url('../../../_fonts/roboto-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../../_fonts/roboto-v18-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+  src: local('Open Sans Regular'), local('OpenSans-Regular'),
+  url('../../_fonts/open-sans-v15-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/open-sans-v15-latin-regular.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/open-sans-v15-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/open-sans-v15-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 
-/* roboto-700 - latin */
+/* open-sans-italic - latin */
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Open Sans Italic'), local('OpenSans-Italic'),
+  url('../../_fonts/open-sans-v15-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/open-sans-v15-latin-italic.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/open-sans-v15-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/open-sans-v15-latin-italic.svg#OpenSans') format('svg'); /* Legacy iOS */
+}
+
+/* open-sans-600 - latin */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Open Sans SemiBold'), local('OpenSans-SemiBold'),
+  url('../../_fonts/open-sans-v15-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/open-sans-v15-latin-600.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/open-sans-v15-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/open-sans-v15-latin-600.svg#OpenSans') format('svg'); /* Legacy iOS */
+}
+
+/* open-sans-700 - latin */
+@font-face {
+  font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
-  src: local('Roboto Bold'), local('Roboto-Bold'),
-  url('../../../_fonts/roboto-v18-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../../_fonts/roboto-v18-latin-700.woff') format('woff'), /* Modern Browsers */
-  url('../../../_fonts/roboto-v18-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../../_fonts/roboto-v18-latin-700.svg#Roboto') format('svg'); /* Legacy iOS */
+  src: local('Open Sans Bold'), local('OpenSans-Bold'),
+  url('../../_fonts/open-sans-v15-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/open-sans-v15-latin-700.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/open-sans-v15-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/open-sans-v15-latin-700.svg#OpenSans') format('svg'); /* Legacy iOS */
+}
+
+
+/* montserrat-regular - latin */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Montserrat Regular'), local('Montserrat-Regular'),
+  url('../../_fonts/montserrat-v12-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/montserrat-v12-latin-regular.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/montserrat-v12-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/montserrat-v12-latin-regular.svg#Montserrat') format('svg'); /* Legacy iOS */
+}
+
+/* montserrat-700 - latin */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Montserrat Bold'), local('Montserrat-Bold'),
+  url('../../_fonts/montserrat-v12-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/montserrat-v12-latin-700.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/montserrat-v12-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/montserrat-v12-latin-700.svg#Montserrat') format('svg'); /* Legacy iOS */
 }
