--- a/resources/assets/frontend/sass/elements/form.scss
+++ b/resources/assets/frontend/sass/elements/form.scss
@@ -1,7 +1,188 @@
+.card.card-shadow {
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);
+}
+
+.form-group {
+  color: #4b0f09;
+
+  .form-control {
+    &:not(:focus):not([disabled]):not([readonly]) {
+      background-color: #f8f9fa;
+    }
+  }
+}
+
 #user_register_container {
   .form-group .form-has-help {
-    text-decoration:underline;
-    text-decoration-style: dashed;
-    text-decoration-color: #cc0f00;
+    //text-decoration: underline;
+    //text-decoration-style: dashed;
+    //text-decoration-color: #cc0f00;
+    border-bottom: 1px dashed #cc0f00;
+  }
+}
+
+.password {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+.password-group {
+  position: relative;
+}
+
+.password-strength-meter {
+  position: relative;
+  height: 3px;
+  background: #DDD;
+  margin: 10px auto 20px;
+  border-radius: 3px;
+}
+
+.fade-enter-active, .fadeIn,
+.fade-leave-active, .fadeOut {
+  animation-duration: .5s;
+  animation-fill-mode: both;
+}
+
+.fade-enter-active, .fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
+
+.fade-leave-active, .fadeOut {
+  -webkit-animation-name: fadeOut;
+  animation-name: fadeOut;
+}
+
+.password-recommends {
+  font-size: .7rem;
+}
+
+.password-strength-meter-fill {
+  background: transparent;
+  height: inherit;
+  position: absolute;
+  width: 0;
+  border-radius: inherit;
+  transition: width 0.5s ease-in-out, background 0.25s;
+}
+
+$password-fill-class: password-strength-meter-fill !default;
+$password-fill-colors: darkred, orangered, orange, yellow, yellowgreen, green, green;
+
+@for $i from 1 through 7 {
+  .#{$password-fill-class}[data-score='#{$i - 1 }'] {
+    background: nth($password-fill-colors, $i);
+    width: calc(#{($i - 1)*17} * 1%);
+  }
+}
+
+.password-field {
+  background-color: #f1f1f1;
+  border: 1px solid #f1f1f1;
+  border-radius: 2px;
+  box-sizing: border-box;
+  font-size: 14px;
+  padding: 13px;
+  width: 100%;
+}
+
+.password-field--disabled {
+  background-color: #f6f6f6;
+  border: 1px solid #f6f6f6;
+}
+
+.password-icons {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.password-toggle {
+  line-height: 1.1;
+  margin-right: 13px;
+}
+
+.password-badge {
+  position: relative;
+  text-align: center;
+  color: white;
+  border-radius: 8px;
+  width: 30px;
+  font-size: 14px;
+  line-height: 1.1;
+  margin-right: 13px;
+  height: 24px;
+  padding: 3px;
+}
+
+.password-badge-error {
+  background: red;
+}
+
+.password-badge-success {
+  background: #1bbf1b;
+}
+
+.btn-clean {
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  color: #777777;
+  padding: 0;
+
+  &:focus {
+    outline: none;
+  }
+
+  svg {
+    fill: currentColor;
+  }
+
+  &:hover, &:focus {
+    color: #404B69;
+  }
+}
+
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
   }
 }
