--- a/resources/assets/backend/sass/app.scss
+++ b/resources/assets/backend/sass/app.scss
@@ -55,6 +55,7 @@
 @import "sidebar-drawer/dropdown";
 @import "skin";
 @import "transitions";
+@import "elements/submit-button";
 @import "elements/buttons";
 @import "elements/tables";
 @import "elements/images";
