--- a/resources/assets/frontend/sass/snippets/header-menu.scss
+++ b/resources/assets/frontend/sass/snippets/header-menu.scss
@@ -5,12 +5,21 @@
 .show .dropdown-menu {
   -webkit-animation-name: dropdownAnimate;
   animation-name: dropdownAnimate;
-  -webkit-animation-duration: .25s;
-  animation-duration: .25s
+  -webkit-animation-duration: .50s;
+  animation-duration: .50s;
+  border: 2px solid rgba(0, 0, 0, 0.15);
 }
 
 .nav-link:not(:hover) {
-  color: #606975;
+  color: $nav-link-color;
+}
+
+.dropdown-item {
+  &:active, &.active {
+    color: #ffffff;
+    background-color: lighten($anchor, 25%);
+
+  }
 }
 
 .topbar {
@@ -26,12 +35,12 @@
   .nav-link {
     font-weight: 700;
     padding: .25rem;
-    color: #606975;
+    color: $nav-link-color;
   }
 
   .nav-lang {
     .nav-link.active {
-      color: #606ddd
+      color: $anchor;
     }
 
     .nav-link.pipe {
@@ -59,33 +68,38 @@ header {
 
     .nav-main {
       .show > .nav-link {
-        color: #606ddd
+        color: $anchor;
       }
+
       .dropdown-item {
-        padding: .35rem 1rem
+        padding: .35rem 1rem;
+
+        &:active, &.active {
+          color: #ffffff;
+          //background-color: #fff;
+          background-color: lighten($anchor, 25%) !important;
+
+        }
       }
-      .dropdown-item.active {
-        font-weight: 700;
-        color: #606ddd;
-        background-color: #fff
-      }
+
 
       .dropdown-mega {
         position: static;
 
-        &>.dropdown-menu {
+        & > .dropdown-menu {
           right: 15px;
           left: 15px;
           margin-top: -9px !important;
-          padding: 1rem
+          padding: 1rem;
         }
 
         .list-group-no-border .list-group-item {
-          margin-bottom:0;
-          border:0
+          margin-bottom: 0;
+          border: 0;
         }
+
         .list-group-sm .list-group-item {
-          padding:.25rem .75rem
+          padding: .25rem .75rem;
         }
       }
     }
@@ -98,7 +112,7 @@ header {
   -webkit-animation-duration: .5s;
   animation-duration: .5s;
   -webkit-animation-fill-mode: both;
-  animation-fill-mode: both
+  animation-fill-mode: both;
 }
 
 .nav-logo {
@@ -108,16 +122,16 @@ header {
 
   &:focus,
   &:hover {
-    color: inherit
+    color: inherit;
   }
 
   img {
-    vertical-align: text-top
+    vertical-align: text-top;
   }
 }
 
 .nav-toggler:focus {
-  outline: 0
+  outline: 0;
 }
 
 .nav-main {
@@ -133,66 +147,42 @@ header {
     width: 100%;
     height: 2px;
     content: '';
-    background-color: #606ddd
+    background-color: $anchor;
   }
 }
 
 @media (min-width: 992px) {
   .dropdown-hover .dropdown-menu {
-    margin: 0
+    margin: 0;
   }
-  .dropdown-hover:hover > .dropdown-menu {
-    display: block
-  }
-  .dropdown-hover > .dropdown-toggle:not(.forwardable):active {
-    pointer-events: none
-  }
-}
 
-@-webkit-keyframes headerAnimation {
-  from {
-    -webkit-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0)
-  }
-  to {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0)
+  body.no-touch {
+    .dropdown-hover:hover > .dropdown-menu {
+      display: block;
+    }
+
+    .dropdown-hover > .dropdown-toggle:not(.forwardable):active {
+      pointer-events: none;
+    }
   }
 }
 
 @keyframes headerAnimation {
   from {
     -webkit-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0)
-  }
-  to {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0)
-  }
-}
-
-@-webkit-keyframes dropdownAnimate {
-  from {
-    -webkit-transform: translate3d(0, -10px, 0);
-    transform: translate3d(0, -10px, 0);
-    opacity: 0
+    transform: translate3d(0, -100%, 0);
   }
   to {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
-    opacity: 1
   }
 }
 
 @keyframes dropdownAnimate {
   from {
-    -webkit-transform: translate3d(0, -10px, 0);
-    transform: translate3d(0, -10px, 0);
-    opacity: 0
+    opacity: 0;
   }
   to {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-    opacity: 1
+    opacity: 1;
   }
 }
