--- a/resources/assets/frontend/sass/app.scss
+++ b/resources/assets/frontend/sass/app.scss
@@ -48,5 +48,6 @@
 //**********************************************
 @import "./snippets/header-menu";
 @import "./snippets/blog-featured";
+@import "./snippets/breadcrumbs";
 
 
