--- a/resources/assets/frontend/sass/fonts.scss
+++ b/resources/assets/frontend/sass/fonts.scss
@@ -58,27 +58,25 @@
   url('../../_fonts/open-sans-v15-latin-700.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 
-
-/* montserrat-regular - latin */
 @font-face {
-  font-family: 'Montserrat';
+  font-family: 'Roboto';
   font-style: normal;
-  font-weight: 400;
-  src: local('Montserrat Regular'), local('Montserrat-Regular'),
-  url('../../_fonts/montserrat-v12-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../_fonts/montserrat-v12-latin-regular.woff') format('woff'), /* Modern Browsers */
-  url('../../_fonts/montserrat-v12-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../_fonts/montserrat-v12-latin-regular.svg#Montserrat') format('svg'); /* Legacy iOS */
+  font-weight: 300;
+  src: local('Roboto Light'), local('Roboto-Light'),
+  url('../../_fonts/roboto-v18-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/roboto-v18-latin-300.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/roboto-v18-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/roboto-v18-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 
-/* montserrat-700 - latin */
+/* roboto-regular - latin */
 @font-face {
-  font-family: 'Montserrat';
+  font-family: 'Roboto';
   font-style: normal;
-  font-weight: 700;
-  src: local('Montserrat Bold'), local('Montserrat-Bold'),
-  url('../../_fonts/montserrat-v12-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../_fonts/montserrat-v12-latin-700.woff') format('woff'), /* Modern Browsers */
-  url('../../_fonts/montserrat-v12-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../_fonts/montserrat-v12-latin-700.svg#Montserrat') format('svg'); /* Legacy iOS */
+  font-weight: 400;
+  src: local('Roboto'), local('Roboto-Regular'),
+  url('../../_fonts/roboto-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/roboto-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/roboto-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/roboto-v18-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
 }
