--- a/resources/assets/frontend/sass/_variables.scss
+++ b/resources/assets/frontend/sass/_variables.scss
@@ -1,5 +1,6 @@
 $body-bg: #f7fafa;
 $primary: #4b0f09;
-$anchor: #914740;
-$nav-link-color: #73615f;
+$anchor: #532d2a;
+$anchor-hover: #99534d;
+$nav-link-color: #9c2014;
 $font-family-title: 'Roboto', sans-serif;
