--- a/resources/assets/frontend/sass/blocks/footer.scss
+++ b/resources/assets/frontend/sass/blocks/footer.scss
@@ -1,12 +1,13 @@
 .footer {
+  height: 14rem;
   clear: both;
-  margin-top: 4rem;
   background-color: #fff;
   border-top: 2px solid #dee2e6;
   padding-top: 1rem;
+  margin-top:2rem;
 
   .container {
-    padding:0.5rem 0;
+    padding: 0.5rem 0;
   }
 
   form {
@@ -27,11 +28,12 @@
   .list-group-sm .list-group-item:focus,
   .list-group-sm .list-group-item:hover {
     background-color: inherit;
-    color: $anchor;
+    color: $anchor-hover;
   }
 }
 
 .copyright {
+  height: 2.3rem;
   font-weight: 300;
   letter-spacing: 0.2rem;
   text-align: center;
