--- a/resources/assets/frontend/sass/blocks/header.scss
+++ b/resources/assets/frontend/sass/blocks/header.scss
@@ -10,15 +10,17 @@
   border: 2px solid rgba(0, 0, 0, 0.15);
 }
 
-.nav-link:not(:hover) {
-  color: $nav-link-color;
+.nav-link {
+    color: $nav-link-color;
+  &:hover{
+    color: $nav-link-color;
+  }
 }
 
 .dropdown-item {
   &:active, &.active {
     color: #ffffff;
     background-color: lighten($anchor, 25%);
-
   }
 }
 
@@ -27,6 +29,7 @@
   z-index: 1031;
   border-bottom: 1px solid #dee2e6;
   background-color: #fff;
+  height: 2.2rem;
 
   .nav-link {
     padding: .25rem 1rem;
@@ -35,14 +38,9 @@
   .nav-link {
     font-weight: 700;
     padding: .25rem;
-    color: $nav-link-color;
   }
 
   .nav-lang {
-    .nav-link.active {
-      color: $anchor;
-    }
-
     .nav-link.pipe {
       font-weight: 400;
       line-height: 1.4
@@ -55,7 +53,7 @@ header {
   z-index: 1030;
   display: -ms-flexbox;
   display: flex;
-  height: 55px;
+  height: 4rem;
   background-color: #fff;
   box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075);
 
@@ -82,6 +80,9 @@ header {
         }
       }
 
+      .dropdown-menu {
+        margin: 0.2rem 0 0 0;
+      }
 
       .dropdown-mega {
         position: static;
@@ -89,7 +90,7 @@ header {
         & > .dropdown-menu {
           right: 15px;
           left: 15px;
-          margin-top: -9px !important;
+          margin: -0.5rem 0 0 0;
           padding: 1rem;
         }
 
@@ -115,10 +116,11 @@ header {
   animation-fill-mode: both;
 }
 
-.nav-logo {
-  font-size: 1.09375rem;
-  width: 100px;
-  padding-left: 0;
+.nav-link.nav-logo {
+  padding: 0.2rem 2.5rem 0.3rem 0;
+  height: 4rem;
+  position: relative;
+  margin-left: -1rem;
 
   &:focus,
   &:hover {
@@ -126,6 +128,7 @@ header {
   }
 
   img {
+    height: 3.5rem;
     vertical-align: text-top;
   }
 }
@@ -142,7 +145,7 @@ header {
 
   .nav-link.active::after {
     position: absolute;
-    bottom: -9px;
+    bottom: -0.8rem;
     left: 0;
     width: 100%;
     height: 2px;
