--- a/resources/assets/frontend/sass/app.scss
+++ b/resources/assets/frontend/sass/app.scss
@@ -53,6 +53,10 @@
 //**********************************************
 
 @import "../../backend/sass/elements/submit-button";
+@import "../../backend/sass/elements/images";
+@import "../../backend/sass/components/dropzone";
+@import "../../backend/sass/components/wizard";
+@import "../../backend/sass/vendor/cropper";
 @import "./vendor/sweetalert2/app";
 
 
