--- a/resources/assets/frontend/sass/elements/form.scss
+++ b/resources/assets/frontend/sass/elements/form.scss
@@ -38,6 +38,10 @@ label.field-required {
   }
 }
 
+#avatar-uploader{
+  padding: 0 1.5rem;
+}
+
 .password-wrapper {
   .password-group {
     position: relative;
