--- a/resources/assets/backend/sass/components/wizard.scss
+++ b/resources/assets/backend/sass/components/wizard.scss
@@ -1,4 +1,11 @@
-
+$wizard-bottom-background:#f7f7f7;
+$wizard-actions-link: #0073b7;
+$wizard-actions-link-hover: #00629c;
+$wizard-step-indicator: #6781a6;
+$wizard-body-border: #afafaf;
+$wizard-step-line:#afafaf;
+$wizard-step-active:#18B800;
+$wizard-actions-link-final: #B84300;
 
 /* Header Steps
 *******************************/
