--- a/resources/assets/frontend/sass/app.scss
+++ b/resources/assets/frontend/sass/app.scss
@@ -50,6 +50,7 @@
 //**********************************************
 @import "./snippets/blog-featured";
 @import "./snippets/breadcrumbs";
+@import "./snippets/error";
 //**********************************************
 
 @import "../../backend/sass/elements/submit-button";
