--- a/resources/emails/mjml/reset_password.mjml
+++ b/resources/emails/mjml/reset_password.mjml
@@ -16,34 +16,25 @@
         <mj-section background-color="#a42227" padding-left="0px" padding-right="0px" padding-bottom="10px"
                     padding-top="10px" border-radius="16px 16px 0px 0px" align="center" border-bottom="8px solid #a75c23">
             <mj-column>
-                <mj-text padding-left="0px" padding-right="0px" padding-bottom="0px" font-size="25px" line-height="27px"
-                         padding-top="20px" align="center" color="#ffffff"><span style="padding-bottom: 15px">{!! trans('email.welcome.title') !!}</span>
-                </mj-text>
-                <mj-text padding-left="0px" padding-right="0px" padding-bottom="10px" font-size="20px"
-                         line-height="22px" padding-top="20px" align="center" color="#ffffff"><span
-                        style="padding-bottom: 15px"><a href="{!! route_i18n('home') !!}"
-                                                        style="color:inherit;text-decoration:underline;">{!! route_i18n('home') !!}</a></span>
+                <mj-text padding-left="0px" padding-right="0px" padding-bottom="25px" font-size="25px" line-height="27px"
+                         padding-top="20px" align="center" color="#ffffff"><span style="padding-bottom: 15px">{!! trans('email.password_reset.title') !!}</span>
                 </mj-text>
             </mj-column>
         </mj-section>
         <mj-section background-color="#efd6ce" padding-left="0px" padding-right="0px" padding-bottom="50px"
-                    padding-top="50px" border-radius="0px 0px 16px 16px" align="center">
+                    padding-top="50px" align="center">
             <mj-column vertical-align="top" width="100%" align="center">
-                <mj-text font-size="15px" padding-top="15px">{!! trans('email.welcome.body1') !!}
-                </mj-text>
-                <mj-text padding-top="15px">{!! trans('email.welcome.body2') !!}
-                </mj-text>
-                <mj-text padding-top="15px" font-size="16px" font-weight="bold">{!! trans('email.welcome.body3') !!}
-                </mj-text>
+                <mj-text font-size="15px" padding-top="15px">{!! trans('email.password_reset.body1') !!}</mj-text>
+                <mj-text padding-top="15px">{!! trans('email.password_reset.body2') !!}</mj-text>
             </mj-column>
         </mj-section>
 
 
         <mj-section background-color="#ce834a" padding-left="0px" padding-right="0px" padding-bottom="22px"
-                    padding-top="25px" align="center" border-top="8px solid #a75c23">
+                    padding-top="25px" border-radius="0px 0px 16px 16px" align="center" border-top="8px solid #a75c23">
             <mj-column vertical-align="top" width="100%" align="center">
-                <mj-button font-weight="bold" background-color="#024944" color="white" href="{!! route_i18n('activate',$activation_token) !!}" font-size="18px"
-                           line-height="23px" padding="20px 30px">{!! trans('email.welcome.cta') !!}
+                <mj-button font-weight="bold" background-color="#024944" color="white" href="{!! route_i18n('password.reset',['token'=>$token,'email'=>urlencode($email)]) !!}" font-size="18px"
+                           line-height="23px" padding="20px 30px">{!! trans('email.password_reset.cta') !!}
                 </mj-button>
             </mj-column>
         </mj-section>
