--- a/resources/assets/frontend/sass/blocks/footer.scss
+++ b/resources/assets/frontend/sass/blocks/footer.scss
@@ -30,6 +30,10 @@
     background-color: inherit;
     color: $anchor-hover;
   }
+
+  .subscribe-newsletter{
+    font-weight: 300;
+  }
 }
 
 .copyright {
