--- a/resources/assets/backend/sass/header.scss
+++ b/resources/assets/backend/sass/header.scss
@@ -14,33 +14,52 @@
       margin-left: 0;
     }
 
-    .dropdown-menu {
-      margin-top: 5px;
-      border-radius: 0;
-      box-shadow: 0 1px 6px 0 rgba(117, 117, 117, .15);
+    .dropdown {
+      .dropdown-menu {
+        margin-top: 5px;
+        border-radius: 0;
+        box-shadow: 0 1px 6px 0 rgba(117, 117, 117, .15);
 
-      &.dropdown-menu-right:before {
-        border-bottom: 7px solid rgba(0, 0, 0, 0.2);
-        border-left: 7px solid transparent;
-        border-right: 7px solid transparent;
-        content: "";
-        display: inline-block;
-        left: auto;
-        right: 9px;
-        position: absolute;
-        top: -6px;
+        &.dropdown-menu-right:before {
+          border-bottom: 7px solid rgba(0, 0, 0, 0.2);
+          border-left: 7px solid transparent;
+          border-right: 7px solid transparent;
+          content: "";
+          display: inline-block;
+          left: auto;
+          right: 9px;
+          position: absolute;
+          top: -6px;
+        }
+
+        &.dropdown-menu-right:after {
+          border-bottom: 6px solid #FFF;
+          border-left: 6px solid transparent;
+          border-right: 6px solid transparent;
+          content: "";
+          display: inline-block;
+          left: auto;
+          right: 10px;
+          position: absolute;
+          top: -5px;
+        }
+
+        .dropdown-item {
+          &:hover {
+            outline: none;
+          }
+        }
       }
+    }
 
-      &.dropdown-menu-right:after {
-        border-bottom: 6px solid #FFF;
-        border-left: 6px solid transparent;
-        border-right: 6px solid transparent;
-        content: "";
-        display: inline-block;
-        left: auto;
-        right: 10px;
-        position: absolute;
-        top: -5px;
+    .dropdown.no-caret {
+      .dropdown-menu {
+        &.dropdown-menu-right:before {
+          right: 15px;
+        }
+        &.dropdown-menu-right:after {
+          right: 16px;
+        }
       }
     }
 
@@ -59,6 +78,7 @@
 
       &:hover {
         background-color: lighten($sidebar-dark-bg, 20%);
+        outline: none;
       }
     }
   }
@@ -112,6 +132,7 @@
     padding: 0 15px;
     font-weight: 300;
     overflow: hidden;
+
     .logo-lg {
       display: block;
     }
@@ -137,7 +158,7 @@
   }
 }
 
-.content{
+.content {
   padding-bottom: 3rem;
 }
 
