--- a/resources/assets/backend/sass/widgets/timeline.scss
+++ b/resources/assets/backend/sass/widgets/timeline.scss
@@ -12,7 +12,13 @@
     top: 0;
     bottom: 0;
     width: 0.3rem;
-    background: #ddd;
+    background: repeating-linear-gradient(
+      45deg,
+      $red,
+      $red 10px,
+      #fff 10px,
+      #fff 20px
+    );
     left: 3rem;
     margin: 0;
     @include border-radius(2px);
@@ -24,13 +30,13 @@
     bottom: 0;
     height: 1rem;
     width: 1rem;
-    background: #ddd;
+    background: #fff;
     left: 2.65rem;
     margin: 0;
     border-radius: 50%;
   }
 
-  > li {
+  > li > div {
     position: relative;
     margin-bottom: 1.2rem;
     @include clearfix();
@@ -38,6 +44,7 @@
     > .timeline-item {
       @include box-shadow($box-boxshadow);
       @include border-radius($box-border-radius);
+      box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);
       margin-top: 0;
       background: #fff;
       color: #444;
@@ -90,12 +97,12 @@
       font-weight: 400;
       padding: 0.5rem 0.8rem;
       display: inline-block;
-      margin-left: 3.5rem;
+      margin: 0 0 1.5rem 3.4rem;
       height: 2.5rem;
       border-radius: 3px;
       user-select: none;
       cursor: default;
-      //@include border-radius(4px);
+
       &.label-today {
         background-color: $red;
         color: #fff;
