--- a/resources/assets/frontend/sass/app.scss
+++ b/resources/assets/frontend/sass/app.scss
@@ -49,6 +49,7 @@
 
 //**********************************************
 @import "./snippets/blog-featured";
+@import "./snippets/blog-spotlight";
 @import "./snippets/breadcrumbs";
 @import "./snippets/error";
 //**********************************************
