--- a/resources/assets/frontend/sass/app.scss
+++ b/resources/assets/frontend/sass/app.scss
@@ -48,6 +48,7 @@
 @import "./blocks/footer";
 
 //**********************************************
+@import "./snippets/blog";
 @import "./snippets/blog-featured";
 @import "./snippets/blog-spotlight";
 @import "./snippets/breadcrumbs";
