--- a/resources/assets/frontend/sass/core.scss
+++ b/resources/assets/frontend/sass/core.scss
@@ -6,6 +6,13 @@ body {
   background-color: $body-bg;
 }
 
+@include media-breakpoint-down(sm) {
+  .container{
+    margin:0 0.5rem;
+    max-width: 100%;
+  }
+}
+
 a {
   color: $anchor;
 
