--- a/resources/assets/frontend/sass/snippets/blog-spotlight.scss
+++ b/resources/assets/frontend/sass/snippets/blog-spotlight.scss
@@ -3,45 +3,67 @@
     padding: 0;
   }
 
-  .spotlight-list {
+  .spotlight-container {
     padding: 0;
 
+    ul, li {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    figure {
+      padding: 0;
+      margin: 0;
+      text-align: center;
+      overflow: hidden;
+      border-radius: 3px;
+    }
+
     > .container {
-      padding:0;
+      padding: 0;
     }
 
     .row {
-      margin:0;
+      margin: 0;
     }
 
-    //.col-lg-6:nth-child(2n+1) {
-    //  padding-right: 1rem;
-    //}
-    //
-    //.col-lg-6:nth-child(2n) {
-    //  padding-left: 1rem;
-    //}
+    .lfc-date {
+      font-style: italic;
+    }
+
+    .spotlight-category {
+      &:nth-child(2n+1){
+        padding-right:0.5rem;
+      }
+    }
+
 
     img {
       position: relative;
       display: block;
-      width: 22rem;
-      height: 15rem;
-      ////width:75%;
-      ////height:75%;
-      //left: 50%;
-      //transform: translate(-50%, 0);
-      //overflow: hidden;
+      max-width: 24rem;
+      //max-height: 20rem;
+      @include media-breakpoint-down(md) {
+        max-width: unset;
+        width: 100%;
+        height: 100%;
+      }
+
     }
 
     .headline-post {
       position: relative;
-      width: 21.875rem;
-      height: 14.375rem;
+      width: 100%;
+      //height: 17rem;
       text-align: center;
       overflow: hidden;
       z-index: 0;
       margin-bottom: 0.75rem;
+      @include media-breakpoint-down(md) {
+        width: $blog-featured-max-width;
+        height: $blog-featured-height;
+      }
 
 
       .headline-content {
@@ -49,54 +71,47 @@
         text-align: left;
         color: #fff;
         z-index: 1;
-        top: 9rem;
+        bottom: 1rem;
         left: 0.5rem;
-        right:0.5rem;
+        right: 0.5rem;
 
         .lfc-title {
-          background-color: rgba(75, 15, 9, 0.3);
+          background-color: rgba(75, 15, 9, 0.4);
           border-radius: 10px;
           font-weight: bold;
-          padding:0.2rem;
+          padding: 0.2rem;
+          @include media-breakpoint-down(md) {
+            font-size: 1.5rem;
+            width: 80%;
+          }
         }
 
         .lfc-date {
           font-size: 0.85rem;
         }
-
       }
     }
   }
 
-  ul, li {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  figure {
-    padding: 0;
-    margin: 0;
-    text-align: center;
-    overflow: hidden;
-
-    img {
-
-    }
-  }
-
   .list-post {
-    .container{
-      padding:0;
+    position: relative;
+
+    &.row {
+      margin: 0 0 0.8rem 0;
+      padding: 0.1rem;
     }
-    li {
-      margin-bottom: 0.5rem;
+
+    .container {
+      padding: 0;
     }
 
     .lfc-title {
       padding-right: 0.3rem;
       font-size: 0.8rem;
       font-weight: bold;
+      @include media-breakpoint-down(md) {
+        font-size: 1.5rem;
+      }
     }
 
     .lfc-date {
@@ -106,16 +121,26 @@
 
   .list-img-container {
     position: relative;
-    //width:8rem;
-    //height:6rem;
     padding: 0;
     text-align: center;
     overflow: hidden;
 
-    img {
-      width: 96px;
-      height: 96px;
+    figure {
+      border-radius: 3px;
+
+      img {
+        width: 8rem;
+        height: 6rem;
+        @include media-breakpoint-down(md) {
+          width: $blog-featured-max-width / 2;
+          height: $blog-featured-height / 2;
+        }
+      }
     }
+  }
+
+  .list-txt-container {
+
   }
 }
 
