--- a/resources/assets/frontend/sass/_variables.scss
+++ b/resources/assets/frontend/sass/_variables.scss
@@ -6,4 +6,4 @@ $primary: #4b0f09;
 $anchor: #532d2a;
 $anchor-hover: #99534d;
 $nav-link-color: #9c2014;
-$font-family-title: 'Roboto', sans-serif;
+$font-family-title: 'Fira Sans', sans-serif;
