--- a/resources/assets/frontend/sass/fonts.scss
+++ b/resources/assets/frontend/sass/fonts.scss
@@ -58,25 +58,60 @@
   url('../../_fonts/open-sans-v15-latin-700.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 
+/* roboto-condensed-regular - latin */
 @font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Roboto Light'), local('Roboto-Light'),
-  url('../../_fonts/roboto-v18-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../_fonts/roboto-v18-latin-300.woff') format('woff'), /* Modern Browsers */
-  url('../../_fonts/roboto-v18-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../_fonts/roboto-v18-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
-}
-
-/* roboto-regular - latin */
-@font-face {
-  font-family: 'Roboto';
+  font-family: 'Roboto Condensed';
   font-style: normal;
   font-weight: 400;
-  src: local('Roboto'), local('Roboto-Regular'),
-  url('../../_fonts/roboto-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../_fonts/roboto-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
-  url('../../_fonts/roboto-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../_fonts/roboto-v18-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+  src: url('../../_fonts/roboto-condensed-v16-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Roboto Condensed'), local('RobotoCondensed-Regular'),
+  url('../../_fonts/roboto-condensed-v16-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../../_fonts/roboto-condensed-v16-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/roboto-condensed-v16-latin-regular.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/roboto-condensed-v16-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/roboto-condensed-v16-latin-regular.svg#RobotoCondensed') format('svg'); /* Legacy iOS */
 }
+
+/* roboto-condensed-700 - latin */
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../../_fonts/roboto-condensed-v16-latin-700.eot'); /* IE9 Compat Modes */
+  src: local('Roboto Condensed Bold'), local('RobotoCondensed-Bold'),
+  url('../../_fonts/roboto-condensed-v16-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../../_fonts/roboto-condensed-v16-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/roboto-condensed-v16-latin-700.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/roboto-condensed-v16-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/roboto-condensed-v16-latin-700.svg#RobotoCondensed') format('svg'); /* Legacy iOS */
+}
+
+/* fira-sans-regular - latin */
+@font-face {
+  font-family: 'Fira Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../../_fonts/fira-sans-v9-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Fira Sans Regular'), local('FiraSans-Regular'),
+  url('../../_fonts/fira-sans-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../../_fonts/fira-sans-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/fira-sans-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/fira-sans-v9-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/fira-sans-v9-latin-regular.svg#FiraSans') format('svg'); /* Legacy iOS */
+}
+
+/* fira-sans-900 - latin */
+@font-face {
+  font-family: 'Fira Sans';
+  font-style: normal;
+  font-weight: 900;
+  src: url('../../_fonts/fira-sans-v9-latin-900.eot'); /* IE9 Compat Modes */
+  src: local('Fira Sans Black'), local('FiraSans-Black'),
+  url('../../_fonts/fira-sans-v9-latin-900.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../../_fonts/fira-sans-v9-latin-900.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/fira-sans-v9-latin-900.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/fira-sans-v9-latin-900.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/fira-sans-v9-latin-900.svg#FiraSans') format('svg'); /* Legacy iOS */
+}
+
+
