--- a/resources/assets/frontend/sass/snippets/blog/general.scss
+++ b/resources/assets/frontend/sass/snippets/blog/general.scss
@@ -13,6 +13,13 @@ h5 {
   }
 }
 
+figure {
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  overflow: hidden;
+}
+
 .social-icon {
   margin: 1.5rem 0;
 
