--- a/resources/assets/frontend/sass/app.scss
+++ b/resources/assets/frontend/sass/app.scss
@@ -50,6 +50,7 @@
 //**********************************************
 @import "snippets/blog/general";
 @import "snippets/blog/post";
+@import "snippets/blog/category";
 @import "snippets/blog/blog-featured";
 @import "snippets/blog/blog-spotlight";
 @import "./snippets/breadcrumbs";
