--- a/resources/assets/frontend/sass/_variables.scss
+++ b/resources/assets/frontend/sass/_variables.scss
@@ -1,7 +1,7 @@
 $brand-color1: #C1272D;
 $brand-color2: #F15A24;
 
-$body-bg: #faf8f7;
+$body-bg: #fcfcfc;
 $primary: #4b0f09;
 $anchor: #532d2a;
 $anchor-hover: #99534d;
