--- a/resources/assets/frontend/sass/snippets/blog/general.scss
+++ b/resources/assets/frontend/sass/snippets/blog/general.scss
@@ -61,8 +61,8 @@ h5.bordered {
           background: #00aced;
         }
 
-        &.fa-google-plus {
-          background: #dd4b39;
+        &.fa-instagram {
+          background: #515BD4;
         }
 
         &.fa-vimeo-square {
