--- a/resources/assets/frontend/sass/app.scss
+++ b/resources/assets/frontend/sass/app.scss
@@ -51,8 +51,10 @@
 @import "snippets/blog/general";
 @import "snippets/blog/post";
 @import "snippets/blog/category";
-@import "snippets/blog/blog-featured";
-@import "snippets/blog/blog-spotlight";
+@import "snippets/blog/author";
+@import "snippets/blog/tag";
+@import "snippets/blog/featured";
+@import "snippets/blog/spotlight";
 @import "./snippets/breadcrumbs";
 @import "./snippets/error";
 //**********************************************
