--- a/resources/assets/frontend/sass/fonts.scss
+++ b/resources/assets/frontend/sass/fonts.scss
@@ -58,32 +58,18 @@
   url('../../_fonts/open-sans-v15-latin-700.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 
-/* roboto-condensed-regular - latin */
+/* fira-sans-300 - latin */
 @font-face {
-  font-family: 'Roboto Condensed';
+  font-family: 'Fira Sans';
   font-style: normal;
-  font-weight: 400;
-  src: url('../../_fonts/roboto-condensed-v16-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local('Roboto Condensed'), local('RobotoCondensed-Regular'),
-  url('../../_fonts/roboto-condensed-v16-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../../_fonts/roboto-condensed-v16-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../_fonts/roboto-condensed-v16-latin-regular.woff') format('woff'), /* Modern Browsers */
-  url('../../_fonts/roboto-condensed-v16-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../_fonts/roboto-condensed-v16-latin-regular.svg#RobotoCondensed') format('svg'); /* Legacy iOS */
-}
-
-/* roboto-condensed-700 - latin */
-@font-face {
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 700;
-  src: url('../../_fonts/roboto-condensed-v16-latin-700.eot'); /* IE9 Compat Modes */
-  src: local('Roboto Condensed Bold'), local('RobotoCondensed-Bold'),
-  url('../../_fonts/roboto-condensed-v16-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../../_fonts/roboto-condensed-v16-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../_fonts/roboto-condensed-v16-latin-700.woff') format('woff'), /* Modern Browsers */
-  url('../../_fonts/roboto-condensed-v16-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../_fonts/roboto-condensed-v16-latin-700.svg#RobotoCondensed') format('svg'); /* Legacy iOS */
+  font-weight: 300;
+  src: url('../../_fonts/fira-sans-v9-latin-300.eot'); /* IE9 Compat Modes */
+  src: local('Fira Sans Light'), local('FiraSans-Light'),
+  url('../../_fonts/fira-sans-v9-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../../_fonts/fira-sans-v9-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/fira-sans-v9-latin-300.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/fira-sans-v9-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/fira-sans-v9-latin-300.svg#FiraSans') format('svg'); /* Legacy iOS */
 }
 
 /* fira-sans-regular - latin */
