--- a/resources/assets/frontend/sass/snippets/error.scss
+++ b/resources/assets/frontend/sass/snippets/error.scss
@@ -15,6 +15,8 @@
       }
 
       .fa.exclamation {
+        position: relative;
+        top: 1.8rem;
         font-size: 5rem;
         color: #fff;
       }
