--- a/resources/assets/frontend/sass/app.scss
+++ b/resources/assets/frontend/sass/app.scss
@@ -55,6 +55,7 @@
 @import "snippets/blog/tag";
 @import "snippets/blog/featured";
 @import "snippets/blog/spotlight";
+@import "snippets/code";
 @import "./snippets/breadcrumbs";
 @import "./snippets/error";
 //**********************************************
