--- a/resources/assets/frontend/sass/snippets/blog/general.scss
+++ b/resources/assets/frontend/sass/snippets/blog/general.scss
@@ -1,6 +1,28 @@
 $blog-featured-height: 33.75rem;
 $blog-featured-max-width: 46.9rem;
 
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.embed-container {
+  iframe, object, embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.twitter-container{
+  margin:1.5rem 0;
+}
+
 figure {
   padding: 0;
   margin: 0;
@@ -17,11 +39,12 @@ h5.bordered {
   text-overflow: ellipsis;
 
   span {
-      border-bottom: 3px solid $primary;
-    padding-bottom:0.6rem;
-      a {
-        text-decoration: none;
-      }
+    border-bottom: 3px solid $primary;
+    padding-bottom: 0.6rem;
+
+    a {
+      text-decoration: none;
+    }
   }
 }
 
