--- a/resources/assets/backend/sass/app.scss
+++ b/resources/assets/backend/sass/app.scss
@@ -1,7 +1,7 @@
 @import 'fonts';
 //************* Vendor Libraries ****************
 //Font Awesome
-//@import "~font-awesome/scss/font-awesome";
+@import "~font-awesome/scss/font-awesome";
 // Bootstrap
 @import "variables";
 //@import "~bootstrap/scss/bootstrap";
